--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ run_verif_rtl_log.txt
 
 # Automatically generated hw files
 tb/tb_util.svh
+tb/testharness.sv
 
 hw/core-v-mini-mcu/include/core_v_mini_mcu_pkg.sv
 hw/core-v-mini-mcu/system_bus.sv
